--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 [project]
 name = "nonebot-plugin-abot-place"
 
-version = "0.1.0"
+version = "0.1.0post1"
 
 description = ""
 authors = [
@@ -13,6 +13,8 @@ authors = [
 dependencies = [
     "nonebot-adapter-onebot>=2.2.2",
     "pillow>=9.5.0",
+    "SQLAlchemy>=2.0.11",
+    "importlib-metadata>=6.6.0",
 ]
 requires-python = ">=3.8,<4.0"
 readme = "README.md"
